--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Three Legged Chairs | CNC Routing, 3D Printing & Fabrication</title>
 <meta name="description" content="Three Legged Chairs is a one-man shop offering CNC routing, 3D printing, CNC plasma cutting, and custom fabrication. Based on precision, creativity, and a touch of wobble. Bring your weird ideas to life." />
 
-<link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="websiteindex/images/favicon.ico" rel="icon" type="image/x-icon"/>
 <style>
     body {
       margin: 0;
