--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('websiteindex/images/shop-blurred-background.jpg') no-repeat center center fixed;
+      background: url('https://github.com/threeleggedchairs/websiteindex/blob/main/images/shop-blurred-background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       line-height: 1.6;
