--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <title>Three Legged Chairs | CNC Routing, 3D Printing & Fabrication</title>
 <meta name="description" content="Three Legged Chairs is a one-man shop offering CNC routing, 3D printing, CNC plasma cutting, and custom fabrication. Based on precision, creativity, and a touch of wobble. Bring your weird ideas to life." />
 
-<link href="websiteindex/images/favicon.ico" rel="icon" type="image/x-icon"/>
+<link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
 <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: url('https://github.com/threeleggedchairs/websiteindex/blob/main/images/shop-blurred-background.jpg') no-repeat center center fixed;
+      background: url('images/shop-blurred-background.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       line-height: 1.6;
@@ -77,7 +77,7 @@
 </head>
 <body>
 <header>
-<img alt="Three Legged Chairs Logo" class="logo" src="websiteindex/images/logo-white-transparent-cropped-tight.png"/>
+<img alt="Three Legged Chairs Logo" class="logo" src="images/logo-white-transparent-cropped-tight.png"/>
 </header>
 <nav>
 <a href="#services">Services</a>
