--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Three Legged Chairs | CNC Routing, 3D Printing & Fabrication</title>
-<meta name="description" content="Three Legged Chairs is a one-man shop offering CNC routing, 3D printing, CNC plasma cutting, and custom fabrication. Based on precision, creativity, and a touch of wobble. Bring your weird ideas to life." />
-
-<link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
-<style>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>Three Legged Chairs | CNC Routing, 3D Printing & Fabrication</title>
+  <meta name="description" content="Three Legged Chairs is a one-man shop offering CNC routing, 3D printing, CNC plasma cutting, and custom fabrication. Based on precision, creativity, and a touch of wobble. Bring your weird ideas to life." />
+  <link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
+  <style>
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -16,14 +16,8 @@
       color: #fff;
       line-height: 1.6;
     }
-    header {
-      text-align: center;
-      padding: 1rem 1rem 0.2rem 1rem;
-    }
-    .logo {
-      max-width: 420px;
-      height: auto;
-    }
+    header { text-align: center; padding: 1rem 1rem 0.2rem 1rem; }
+    .logo { max-width: 420px; height: auto; }
     nav {
       max-width: 900px;
       margin: 0 auto;
@@ -36,26 +30,34 @@
       margin: 0 1rem;
       text-decoration: none;
       color: #ccc;
+      transition: color 0.3s ease;
     }
-    nav a:hover {
-      color: #fff;
-    }
+    nav a:hover { color: #fff; }
     main {
       background: rgba(0, 0, 0, 0.7);
       padding: 2rem;
       max-width: 900px;
       margin: 2rem auto;
       border-radius: 8px;
+      animation: fadeIn 1s ease-in;
     }
-    section {
-      margin-bottom: 3rem;
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
-    h2 {
-      border-bottom: 1px solid #555;
-      padding-bottom: 0.3rem;
+    section { margin-bottom: 3rem; }
+    h1, h2 { text-align: center; }
+    h2 { border-bottom: 1px solid #555; padding-bottom: 0.3rem; }
+    ul { padding-left: 1.5rem; }
+    .services, .work-gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      gap: 1rem;
     }
-    ul {
-      padding-left: 1.5rem;
+    .services > div, .work-gallery > div {
+      flex: 1 1 45%;
+      min-width: 200px;
     }
     footer {
       background: rgba(0, 0, 0, 0.7);
@@ -72,89 +74,70 @@
       text-decoration: none;
       margin-top: 1rem;
       border-radius: 4px;
+      transition: background 0.3s ease;
+    }
+    .cta:hover { background: #eee; }
+    form input, form textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.5rem 0;
+      border-radius: 4px;
+      border: none;
+    }
+    form button {
+      background: #fff;
+      color: #000;
+      border: none;
+      padding: 0.75rem 1.5rem;
+      border-radius: 4px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-<header>
-<img alt="Three Legged Chairs Logo" class="logo" src="images/logo-white-transparent-cropped-tight.png"/>
-</header>
-<nav>
-<a href="#services">Services</a>
-<a href="#work">Work</a>
-<a href="#about">About</a>
-<a href="#contact">Contact</a>
-</nav>
-<main>
-<h1 style="white-space: nowrap; font-size: 1.8rem; text-align: center;">Precision CNC &amp; 3D Printing in a One-Man Fabrication Shop</h1>
-<section id="services">
-<h2>Services</h2>
-<div style="display: flex; justify-content: space-between; gap: 2%; margin-top: 1rem; flex-wrap: nowrap;">
-<div style="width: 23%;">
-<h3>CNC Routing</h3>
-<ul>
-<li>Custom furniture parts</li>
-<li>Sign engraving</li>
-<li>Template creation</li>
-</ul>
-</div>
-<div style="width: 23%;">
-<h3>3D Printing</h3>
-<ul>
-<li>Prototyping</li>
-<li>Replacement parts</li>
-<li>Miniatures and models</li>
-</ul>
-</div>
-<div style="width: 23%;">
-<h3>CNC Plasma Cutting</h3>
-<ul>
-<li>Metal signage</li>
-<li>Brackets and flanges</li>
-<li>Decorative panels</li>
-</ul>
-</div>
-<div style="width: 23%;">
-<h3>General Fabrication</h3>
-<ul>
-<li>Welding &amp; assembly</li>
-<li>Fixture design</li>
-<li>Hardware installation</li>
-</ul>
-</div>
-</div>
-</section>
-<section id="work">
-<h2>Work</h2>
-<div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 2%;">
-<div style="width: 32%; text-align: center;">
-<img alt="CNC cut walnut frame" src="images/work_image_1.jpg" style="width: 100%; border-radius: 4px;"/>
-<p style="margin-top: 0.5rem; font-size: 0.95rem;">Walnut Frame Cutout</p>
-</div>
-<div style="width: 32%; text-align: center;">
-<img alt="Custom kayak trailer fabrication" src="images/work_image_2.jpg" style="width: 100%; border-radius: 4px;"/>
-<p style="margin-top: 0.5rem; font-size: 0.95rem;">Kayak Trailer Build</p>
-</div>
-<div style="width: 32%; text-align: center;">
-<img alt="3D printed Stranger Things collectible coin" src="images/work_image_3.jpg" style="width: 100%; border-radius: 4px;"/>
-<p style="margin-top: 0.5rem; font-size: 0.95rem;">Stranger Things Coin</p>
-</div>
-</div>
-</section>
-<section id="about">
-<h2>About</h2>
-<p>I'm Paul. I run this one-man shop. I like things that work well, look good, and maybe wobble just a little. I'm here to help you bring ideas into the real world — precise, reliable, and made with care.</p>
-</section>
-<section id="contact">
-<h2>Contact</h2>
-<p>Email me your idea or file: <strong>threeleggedchairsllc@gmail.com</strong></p>
-<p>Or just say hi. No project is too small or too weird.</p>
-<a class="cta" href="mailto:threeleggedchairsllc@gmail.com?subject=Inquiry%20from%20website">Email Me</a>
-<p style="margin-top: 1rem;">Follow me on <a href="https://www.instagram.com/threeleggedchairs" style="color:#fff; text-decoration:underline;" target="_blank">Instagram</a> @threeleggedchairs</p>
-</section>
-</main>
-<footer>
-    © 2025 Three Legged Chairs LLC — Built with care
-</footer>
+  <header>
+    <img src="images/logo-white-transparent-cropped-tight.png" alt="Three Legged Chairs company logo" class="logo"/>
+  </header>
+  <nav>
+    <a href="#services">Services</a>
+    <a href="#work">Work</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+  </nav>
+  <main>
+    <h1 style="white-space: nowrap; font-size: 1.8rem;">Precision CNC &amp; 3D Printing in a One-Man Fabrication Shop</h1>
+    <section id="services">
+      <h2>Services</h2>
+      <div class="services">
+        <div><h3>CNC Routing</h3><ul><li>Custom furniture parts</li><li>Sign engraving</li><li>Template creation</li></ul></div>
+        <div><h3>3D Printing</h3><ul><li>Prototyping</li><li>Replacement parts</li><li>Miniatures and models</li></ul></div>
+        <div><h3>CNC Plasma Cutting</h3><ul><li>Metal signage</li><li>Brackets and flanges</li><li>Decorative panels</li></ul></div>
+        <div><h3>General Fabrication</h3><ul><li>Welding &amp; assembly</li><li>Fixture design</li><li>Hardware installation</li></ul></div>
+      </div>
+    </section>
+    <section id="work">
+      <h2>Work</h2>
+      <div class="work-gallery">
+        <div><img alt="CNC cut walnut frame" src="images/work_image_1.jpg" style="width: 100%; border-radius: 4px;"/><p>Walnut Frame Cutout</p></div>
+        <div><img alt="Custom kayak trailer fabrication" src="images/work_image_2.jpg" style="width: 100%; border-radius: 4px;"/><p>Kayak Trailer Build</p></div>
+        <div><img alt="3D printed Stranger Things collectible coin" src="images/work_image_3.jpg" style="width: 100%; border-radius: 4px;"/><p>Stranger Things Coin</p></div>
+      </div>
+    </section>
+    <section id="about">
+      <h2>About</h2>
+      <p>I'm Paul. I run this one-man shop. I like things that work well, look good, and maybe wobble just a little. I'm here to help you bring ideas into the real world — precise, reliable, and made with care.</p>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <form action="https://formspree.io/f/your-form-id" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="_replyto" placeholder="Your Email" required>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send</button>
+      </form>
+      <p style="margin-top: 1rem;">Follow me on <a href="https://www.instagram.com/threeleggedchairs" style="color:#fff; text-decoration:underline;" target="_blank">Instagram</a> @threeleggedchairs</p>
+    </section>
+  </main>
+  <footer>© 2025 Three Legged Chairs LLC — Built with care</footer>
 </body>
 </html>
