--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     h1, h2 { text-align: center; }
     h2 { border-bottom: 1px solid #555; padding-bottom: 0.3rem; }
     h1.tagline {
+      color: #f4d35e;
       white-space: nowrap;
       font-size: 1.8rem;
       margin-bottom: 2.5rem;
