--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <form action="https://formspree.io/f/your-form-id" method="POST">
+      <form action="https://formspree.io/f/your-form-id" method="POST" style="max-width: 66%; margin: 0 auto;">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="_replyto" placeholder="Your Email" required>
         <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
