--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 
 <!DOCTYPE html>
-
 <html lang="en">
-<head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Three Legged Chairs | CNC Routing, 3D Printing &amp; Fabrication</title>
-<meta content="Three Legged Chairs is a one-man shop offering CNC routing, 3D printing, CNC plasma cutting, and custom fabrication. Based on precision, creativity, and a touch of wobble. Bring your weird ideas to life." name="description"/>
-<link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
-<style>
-    * { box-sizing: border-box; }
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>
+   Three Legged Chairs | CNC Routing, 3D Printing &amp; Fabrication
+  </title>
+  <meta content="Three Legged Chairs is a one-man shop offering CNC routing, 3D printing, CNC plasma cutting, and custom fabrication. Based on precision, creativity, and a touch of wobble. Bring your weird ideas to life." name="description"/>
+  <link href="images/favicon.ico" rel="icon" type="image/x-icon"/>
+  <style>
+   * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -109,51 +110,155 @@
       cursor: pointer;
     }
   </style>
-</head>
-<body>
-<header>
-<img alt="Three Legged Chairs company logo" class="logo" src="images/logo-white-transparent-cropped-tight.png"/>
-</header>
-<nav>
-<a href="#services">Services</a>
-<a href="#work">Work</a>
-<a href="#about">About</a>
-<a href="#contact">Contact</a>
-</nav>
-<main>
-<h1 class="tagline">Precision CNC &amp; 3D Printing in a One-Man Fabrication Shop</h1>
-<section id="services">
-<h2>Services</h2>
-<div class="services">
-<div><h3>CNC Routing</h3><ul><li>Custom furniture parts</li><li>Sign engraving</li><li>Template creation</li></ul></div>
-<div><h3>3D Printing</h3><ul><li>Prototyping</li><li>Replacement parts</li><li>Miniatures and models</li></ul></div>
-<div><h3>CNC Plasma Cutting</h3><ul><li>Metal signage</li><li>Brackets and flanges</li><li>Decorative panels</li></ul></div>
-<div><h3>General Fabrication</h3><ul><li>Welding &amp; assembly</li><li>Fixture design</li><li>Hardware installation</li></ul></div>
-</div>
-</section>
-<section id="work">
-<h2>Work</h2>
-<div class="work-gallery">
-<div><img alt="CNC cut walnut frame" src="images/work_image_1.jpg" style="width: 100%; border-radius: 4px;"/><p>Walnut Frame Cutout</p></div>
-<div><img alt="Custom kayak trailer fabrication" src="images/work_image_2.jpg" style="width: 100%; border-radius: 4px;"/><p>Kayak Trailer Build</p></div>
-<div><img alt="3D printed Stranger Things collectible coin" src="images/work_image_3.jpg" style="width: 100%; border-radius: 4px;"/><p>Stranger Things Coin</p></div>
-</div>
-</section>
-<section id="about">
-<h2>About</h2>
-<p>I'm Paul. I run this one-man shop. I like things that work well, look good, and maybe wobble just a little. I'm here to help you bring ideas into the real world — precise, reliable, and made with care.</p>
-<p style="margin-top: 1.5rem; font-weight: bold;"><a href="https://www.instagram.com/threeleggedchairs" style="color:#f4d35e; text-decoration:none;" target="_blank"><img alt="Instagram icon" src="images/instagram-icon.png" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;"/>Follow me on Instagram @threeleggedchairs</a></p></section>
-<section id="contact">
-<h2>Contact</h2>
-<form action="https://formspree.io/f/your-form-id" method="POST" style="max-width: 66%; margin: 0 auto;">
-<input name="name" placeholder="Your Name" required="" type="text"/>
-<input name="_replyto" placeholder="Your Email" required="" type="email"/>
-<textarea name="message" placeholder="Your Message" required="" rows="5"></textarea>
-<button type="submit">Send</button>
-</form>
-
-</section>
-</main>
-<footer>© 2025 Three Legged Chairs LLC — Built with care</footer>
-</body>
+ </head>
+ <body>
+  <header>
+   <img alt="Three Legged Chairs company logo" class="logo" src="images/logo-white-transparent-cropped-tight.png"/>
+  </header>
+  <nav>
+   <a href="#services">
+    Services
+   </a>
+   <a href="#work">
+    Work
+   </a>
+   <a href="#about">
+    About
+   </a>
+   <a href="#contact">
+    Contact
+   </a>
+  </nav>
+  <main>
+   <h1 class="tagline">
+    Precision CNC &amp; 3D Printing in a One-Man Fabrication Shop
+   </h1>
+   <section id="services">
+    <h2>
+     Services
+    </h2>
+    <div class="services" style="display: flex; justify-content: center; align-items: flex-start; flex-wrap: nowrap; gap: 2rem; max-width: 1000px; margin: 0 auto;">
+     <div style="text-align: left; flex: 1 1 22%; font-size: 0.85rem; min-width: 0;">
+      <h3>
+       CNC Routing
+      </h3>
+      <ul style="list-style-type: none; padding-left: 0;">
+       <li>
+        Custom furniture parts
+       </li>
+       <li>
+        Sign engraving
+       </li>
+       <li>
+        Template creation
+       </li>
+      </ul>
+     </div>
+     <div style="text-align: left; flex: 1 1 22%; font-size: 0.85rem; min-width: 0;">
+      <h3>
+       3D Printing
+      </h3>
+      <ul style="list-style-type: none; padding-left: 0;">
+       <li>
+        Prototyping
+       </li>
+       <li>
+        Replacement parts
+       </li>
+       <li>
+        Miniatures and models
+       </li>
+      </ul>
+     </div>
+     <div style="text-align: left; flex: 1 1 22%; font-size: 0.85rem; min-width: 0;">
+      <h3>
+       CNC Plasma Cutting
+      </h3>
+      <ul style="list-style-type: none; padding-left: 0;">
+       <li>
+        Metal signage
+       </li>
+       <li>
+        Brackets and flanges
+       </li>
+       <li>
+        Decorative panels
+       </li>
+      </ul>
+     </div>
+     <div style="text-align: left; flex: 1 1 22%; font-size: 0.85rem; min-width: 0;">
+      <h3>
+       General Fabrication
+      </h3>
+      <ul style="list-style-type: none; padding-left: 0;">
+       <li>
+        Welding &amp; assembly
+       </li>
+       <li>
+        Fixture design
+       </li>
+       <li>
+        Hardware installation
+       </li>
+      </ul>
+     </div>
+    </div>
+   </section>
+   <section id="work">
+    <h2>
+     Work
+    </h2>
+    <div class="work-gallery">
+     <div>
+      <img alt="CNC cut walnut frame" src="images/work_image_1.jpg" style="width: 100%; border-radius: 4px;"/>
+      <p>
+       Walnut Frame Cutout
+      </p>
+     </div>
+     <div>
+      <img alt="Custom kayak trailer fabrication" src="images/work_image_2.jpg" style="width: 100%; border-radius: 4px;"/>
+      <p>
+       Kayak Trailer Build
+      </p>
+     </div>
+     <div>
+      <img alt="3D printed Stranger Things collectible coin" src="images/work_image_3.jpg" style="width: 100%; border-radius: 4px;"/>
+      <p>
+       Stranger Things Coin
+      </p>
+     </div>
+    </div>
+   </section>
+   <section id="about">
+    <h2>
+     About
+    </h2>
+    <p>
+     I'm Paul. I run this one-man shop. I like things that work well, look good, and maybe wobble just a little. I'm here to help you bring ideas into the real world — precise, reliable, and made with care.
+    </p>
+    <p style="margin-top: 1.5rem; font-weight: bold;">
+     <a href="https://www.instagram.com/threeleggedchairs" style="color:#f4d35e; text-decoration:none;" target="_blank">
+      <img alt="Instagram icon" src="images/instagram-icon.png" style="width: 18px; height: 18px; vertical-align: middle; margin-right: 6px;"/>
+      Follow me on Instagram @threeleggedchairs
+     </a>
+    </p>
+   </section>
+   <section id="contact">
+    <h2>
+     Contact
+    </h2>
+    <form action="https://formspree.io/f/your-form-id" method="POST" style="max-width: 66%; margin: 0 auto;">
+     <input name="name" placeholder="Your Name" required="" type="text"/>
+     <input name="_replyto" placeholder="Your Email" required="" type="email"/>
+     <textarea name="message" placeholder="Your Message" required="" rows="5"></textarea>
+     <button type="submit">
+      Send
+     </button>
+    </form>
+   </section>
+  </main>
+  <footer>
+   © 2025 Three Legged Chairs LLC — Built with care
+  </footer>
+ </body>
 </html>
