--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
  <head>
@@ -125,6 +126,7 @@
    <a href="#about">
     About
    </a>
+   <a href="products.html">Products</a>
    <a href="#contact">
     Contact
    </a>
