--- a/products_updated_with_slotted_bench.html
+++ b/products_updated_with_slotted_bench.html
@@ -83,7 +83,7 @@
   <div class="product">
     <img src="images/bench_cropped_resized.jpg" alt="Slotted Pine Bench"/>
     <h2>Slotted Pine Bench</h2>
-    <p>Handmade pine bench with a slatted top. Minimalist, sturdy, and perfect for indoor or outdoor use.</p>
+    <p>Our classicly modern handmade pine bench with a slotted top. Minimalist, sturdy, and perfect for indoor or outdoor use.</p>
     <p><strong>$60 + shipping (Continental US)</strong></p>
     <a href="https://www.paypal.com/ncp/payment/BENCHPAYMENTLINK" target="_blank" class="buy-now-button">Buy Now</a>
   </div>
