--- a/productsupdated.html
+++ b/productsupdated.html
@@ -84,7 +84,7 @@
     <img src="images/bench_cropped_resized.jpg" alt="Slotted Pine Bench"/>
     <h2>Slotted Pine Bench</h2>
     <p>Our classicly modern handmade pine bench with a slotted top. Minimalist, sturdy, and perfect for indoor or outdoor use.</p>
-    <p><strong>$60 + shipping (Continental US)</strong></p>
+    <p><strong>$145</strong></p>
     <a href="https://www.paypal.com/ncp/payment/BENCHPAYMENTLINK" target="_blank" class="buy-now-button">Buy Now</a>
   </div>
 </div> <!-- end of product-grid -->
