--- a/productsupdated.html
+++ b/productsupdated.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -74,7 +75,15 @@
     <h1>Product Listing</h1>
     <div class="product-grid">
   <div class="product">
-      <img src="images/shoot-a-lite-holster.jpg" alt="Shoot-a-Lite Striker holster"/>
+      
+<div class="carousel">
+  <button class="carousel-arrow left" onclick="prevSlide()">&#10094;</button>
+  <button class="carousel-arrow right" onclick="nextSlide()">&#10095;</button>
+  <img class="carousel-slide active" src="images/shoot-a-lite-1.jpg" alt="Shoot-a-Lite 1">
+  <img class="carousel-slide" src="images/shoot-a-lite-2.jpg" alt="Shoot-a-Lite 2">
+  <img class="carousel-slide" src="images/shoot-a-lite-3.jpg" alt="Shoot-a-Lite 3">
+</div>
+
       <h2>Shoot-a-Lite Striker Holster</h2>
       <p>Holster for carrying your Shoot-a-Lite torch striker.</p>
       <p><strong>$15 + shipping (Continental US)</strong></p>
@@ -89,5 +98,96 @@
   </div>
 </div> <!-- end of product-grid -->
   </main>
+
+<style>
+  .carousel {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto 1rem;
+    overflow: hidden;
+    border-radius: 8px;
+  }
+  .carousel-slide {
+    display: none;
+    width: 100%;
+    border-radius: 8px;
+  }
+  .carousel-slide.active {
+    display: block;
+  }
+</style>
+<script>
+  let slideIndex = 0;
+  const slides = document.querySelectorAll('.carousel-slide');
+  if (slides.length > 0) {
+    slides[0].classList.add('active');
+    setInterval(() => {
+      slides[slideIndex].classList.remove('active');
+      slideIndex = (slideIndex + 1) % slides.length;
+      slides[slideIndex].classList.add('active');
+    }, 3000);
+  }
+</script>
+
+<style>
+  .carousel {
+    position: relative;
+    width: 100%;
+    max-width: 400px;
+    margin: 0 auto 1rem;
+    overflow: hidden;
+    border-radius: 8px;
+  }
+  .carousel-slide {
+    display: none;
+    width: 100%;
+    border-radius: 8px;
+  }
+  .carousel-slide.active {
+    display: block;
+  }
+  .carousel-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2rem;
+    background: rgba(0, 0, 0, 0.4);
+    color: white;
+    border: none;
+    padding: 0.5rem 0.8rem;
+    cursor: pointer;
+    z-index: 1;
+  }
+  .carousel-arrow.left {
+    left: 10px;
+  }
+  .carousel-arrow.right {
+    right: 10px;
+  }
+</style>
+<script>
+  let slideIndex = 0;
+  const slides = document.querySelectorAll('.carousel-slide');
+
+  function showSlide(index) {
+    slides.forEach(slide => slide.classList.remove('active'));
+    slides[index].classList.add('active');
+  }
+
+  function nextSlide() {
+    slideIndex = (slideIndex + 1) % slides.length;
+    showSlide(slideIndex);
+  }
+
+  function prevSlide() {
+    slideIndex = (slideIndex - 1 + slides.length) % slides.length;
+    showSlide(slideIndex);
+  }
+
+  if (slides.length > 0) {
+    showSlide(slideIndex);
+  }
+</script>
 </body>
 </html>
