--- a/productsupdated.html
+++ b/productsupdated.html
@@ -76,13 +76,18 @@
     <div class="product-grid">
   <div class="product">
       
+
 <div class="carousel">
   <button class="carousel-arrow left" onclick="prevSlide()">&#10094;</button>
+  <div class="carousel-track">
+    <img class="carousel-slide active" src="images/shoot-a-lite_1.jpg" alt="Shoot-a-Lite 1">
+    <img class="carousel-slide" src="images/shoot-a-lite_2.jpg" alt="Shoot-a-Lite 2">
+    <img class="carousel-slide" src="images/shoot-a-lite_3.jpg" alt="Shoot-a-Lite 3">
+    <img class="carousel-slide" src="images/shoot-a-lite_4.jpg" alt="Shoot-a-Lite 4">
+  </div>
   <button class="carousel-arrow right" onclick="nextSlide()">&#10095;</button>
-  <img class="carousel-slide active" src="images/shoot-a-lite-1.jpg" alt="Shoot-a-Lite 1">
-  <img class="carousel-slide" src="images/shoot-a-lite-2.jpg" alt="Shoot-a-Lite 2">
-  <img class="carousel-slide" src="images/shoot-a-lite-3.jpg" alt="Shoot-a-Lite 3">
 </div>
+
 
       <h2>Shoot-a-Lite Striker Holster</h2>
       <p>Holster for carrying your Shoot-a-Lite torch striker.</p>
