--- a/productsupdated.html
+++ b/productsupdated.html
@@ -109,8 +109,8 @@
 </div>
 
     <h2>Slotted Pine Bench</h2>
-    <p>Our classicly modern handmade pine bench with a slotted top. Minimalist, sturdy, and perfect for indoor or outdoor use.</p>
-    <p><strong>$145</strong></p>
+    <p>Our classicly modern handmade pine bench with a slotted top. Minimalist, sturdy, Light and perfect for indoor or outdoor use.</p>
+    <p><strong>Raw Pine $135 or Primed for $155. A painted option isnt available at the moment.</strong></p>
     <a href="https://www.paypal.com/ncp/payment/BENCHPAYMENTLINK" target="_blank" class="buy-now-button">Buy Now</a>
   </div>
 </div> <!-- end of product-grid -->
