--- a/productsupdated.html
+++ b/productsupdated.html
@@ -103,7 +103,7 @@
     <img class="carousel-slide bench-slide" src="images/bench_2.jpg" alt="Bench 2">
     <img class="carousel-slide bench-slide" src="images/bench_3.jpg" alt="Bench 3">
     <img class="carousel-slide bench-slide" src="images/bench_4.jpg" alt="Bench 4">
-    <img class="carousel-slide bench-slide" src="images/bench_5.jpg" alt="Bench 5">
+    <img class="carousel-slide bench-slide" src="images/bench_5_b.jpg" alt="Bench 5">
   </div>
   <button class="carousel-arrow right" onclick="nextBenchSlide()">&#10095;</button>
 </div>
