--- a/productsupdated.html
+++ b/productsupdated.html
@@ -99,11 +99,11 @@
 <div class="carousel">
   <button class="carousel-arrow left" onclick="prevBenchSlide()">&#10094;</button>
   <div class="carousel-track bench-track">
-    <img class="carousel-slide bench-slide active" src="images/bench_1.jpg" alt="Bench 1">
-    <img class="carousel-slide bench-slide" src="images/bench_2.jpg" alt="Bench 2">
+    <img class="carousel-slide bench-slide active" src="images/bench_5_b.jpg" alt="Bench 1">
+    <img class="carousel-slide bench-slide" src="images/bench_1.jpg" alt="Bench 2">
     <img class="carousel-slide bench-slide" src="images/bench_3.jpg" alt="Bench 3">
     <img class="carousel-slide bench-slide" src="images/bench_4.jpg" alt="Bench 4">
-    <img class="carousel-slide bench-slide" src="images/bench_5_b.jpg" alt="Bench 5">
+    <img class="carousel-slide bench-slide" src="images/bench_2.jpg" alt="Bench 5">
   </div>
   <button class="carousel-arrow right" onclick="nextBenchSlide()">&#10095;</button>
 </div>
