--- a/products.html
+++ b/products.html
@@ -101,7 +101,7 @@
   <button class="carousel-arrow left" onclick="prevBenchSlide()">&#10094;</button>
   <div class="carousel-track bench-track">
     <img class="carousel-slide bench-slide active" src="images/bench_5_b.jpg" alt="Bench 1">
-    <img class="carousel-slide bench-slide" src="images/bench_1_a.jpg" alt="Bench 2">
+    <img class="carousel-slide bench-slide" src="images/bench_1.jpg" alt="Bench 2">
     <img class="carousel-slide bench-slide" src="images/bench_3.jpg" alt="Bench 3">
     <img class="carousel-slide bench-slide" src="images/bench_4.jpg" alt="Bench 4">
     <img class="carousel-slide bench-slide" src="images/bench_2.jpg" alt="Bench 5">
