--- a/products.html
+++ b/products.html
@@ -105,6 +105,7 @@
     <img class="carousel-slide bench-slide" src="images/bench_3.jpg" alt="Bench 3">
     <img class="carousel-slide bench-slide" src="images/bench_4.jpg" alt="Bench 4">
     <img class="carousel-slide bench-slide" src="images/bench_2.jpg" alt="Bench 5">
+    <img class="carousel-slide bench-slide" src="images/bench_6.jpg" alt="Bench 6">
   </div>
   <button class="carousel-arrow right" onclick="nextBenchSlide()">&#10095;</button>
 </div>
