--- a/products.html
+++ b/products.html
@@ -112,7 +112,7 @@
 
     <h2>Slotted Pine Bench</h2>
     <p>Our classicly modern handmade pine bench with a slotted top. Minimalist, sturdy, Light and perfect for indoor or outdoor use.</p>
-    <p><strong>Raw Pine $145 or Primed for $165. *** For a very limited time, this bench is available in "Toasted Bagel" / Behr Exterior paint, LIMITED TIME ONLY FOR $185.</strong></p>
+    <p><strong>Raw Pine $118 or Primed for $138. *** For a very limited time, this bench is available in "Toasted Bagel" / Behr Exterior paint, LIMITED TIME ONLY FOR $158. And... Free Delivery within 5 miles of me! Please allow one week lead time between purchase and delivery. Thank you.</strong></p>
     <a href="https://www.paypal.com/ncp/payment/VNCNNKHX9T52C" target="_blank" class="buy-now-button">Buy Now</a>
   </div>
 </div> <!-- end of product-grid -->
